# devops-task-Sh4peSh1fter

./: .gitignore  README.md  solution_walkthrough.md  suggested-README.md
app-go/: docker-compose.yml  read_products.go
app-node/: create_product.js
mongo/: .env.example  Dockerfile  docker-compose.yml  docker-entrypoint.sh  haproxy.cfg  healthcheck.sh  mongo-keyfile
scripts/: check_replicaset_status.py  create_app_user.py  init_mongo_servers.py  pyproject.toml
